# Dolos

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  justfile  openapi.yaml
admin/: admin.c  admin.h
client/: client.c  client.h  main.c
config/: client.cfg  server.cfg
server/: main.c  server.c  server.h
services/: sayhello.h  service.h
